noinst_LTLIBRARIES = libCategoryListView.la

INCLUDES =  -I$(srcdir)/.. $(all_includes)

libCategoryListView_la_SOURCES = DragableListView.cpp DragObject.cpp CheckDropItem.cpp DragItemInfo.cpp

KDE_CXXFLAGS = $(USE_EXCEPTIONS) $(USE_THREADS) -DQT_NO_CAST_ASCII -DQT_CAST_NO_ASCII

METASOURCES = AUTO
