# For DB/*.h and such
INCLUDE_DIRECTORIES(..)

set(QT_USE_QTSQL TRUE)

SET(libSQLDB_SRCS
  ${CMAKE_CURRENT_SOURCE_DIR}/Database.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/QSqlConnection.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLCategoryCollection.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLFolderCategory.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLSpecialCategory.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLCategory.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLImageInfo.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/QueryHelper.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLImageDateCollection.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLMD5Map.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLImageInfoCollection.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/Cursor.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/ConfigFileHandler.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLSettingsWidget.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/DatabaseAddress.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLMemberMap.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/QueryResult.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLTagCategory.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLNormalCategory.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/SQLTokensCategory.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/DriverManager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/DatabaseManagers.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/DatabaseInitialization.cpp
)

KDE4_ADD_LIBRARY(SQLDB STATIC ${libSQLDB_SRCS})

ADD_SUBDIRECTORY(Schema)
TARGET_LINK_LIBRARIES(SQLDB SQLDBSchema ${QT_QTSQL_LIBRARY})
