noinst_LTLIBRARIES = \
    libsurvey.la

INCLUDES = \
    $(all_includes)

libsurvey_la_SOURCES = \
	question.cpp surveydialog.cpp textquestion.cpp\
	infopage.cpp alternativequestion.cpp

METASOURCES = AUTO

icondir = $(kde_datadir)/kimdaba/pics
icon_DATA = questionmark.png questionmark-flipped.png exclamationmark.png
