noinst_LTLIBRARIES = \
    libsurvey.la

INCLUDES = \
    $(all_includes) -I$(srcdir)/..

libsurvey_la_SOURCES = \
	Question.cpp SurveyDialog.cpp TextQuestion.cpp\
	InfoPage.cpp AlternativeQuestion.cpp MySurvey.cpp SurveyCount.cpp

METASOURCES = AUTO

icondir = $(kde_datadir)/kimdaba/pics
icon_DATA = questionmark.png questionmark-flipped.png exclamationmark.png
