demodir = $(kde_datadir)/kimdaba/demo
demo_DATA = index.xml img001.jpg img002.jpg img003.jpg img004.jpg img005.jpg img006.jpg \
            img007.jpg img008.jpg img009.jpg img010.jpg img011.jpg img012.jpg img013.jpg \
			img014.jpg img015.jpg img016.jpg img017.jpg img018.jpg img019.jpg img020.jpg \
			img021.jpg img022.jpg img023.jpg img024.jpg

SUBDIRS = CategoryImages
